--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TaPlans"
-        tools:targetApi="31">
+        tools:targetApi="34"
+        tools:ignore="ObsoleteSdkInt">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -23,6 +25,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".MyPreferences" android:screenOrientation="fullSensor"
+            tools:ignore="DiscouragedApi">
+        </activity>
+
     </application>
 
 </manifest>
