--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         </activity>
 
         <activity android:name=".MyPreferences" android:screenOrientation="fullSensor"
+            android:theme="@style/MyPreferenceTheme"
             tools:ignore="DiscouragedApi">
         </activity>
 
